		the previous buggy behaviour. Also breaks WordMatchKernel as for this
		kernel normalization is now enabled by default.
		- The custom kernel no longer requires lhs/rhs features (it will create
				its own dummy features)
		- Linear kernels don't use kernel cache (only slows down things)
		- Integrate the Oligo string-kernel (from Meinecke et.al 2004)
	* Bugfixes:
		- Support Intel MKL on 32bit archs.
		- Fix compilation when atlas/lapack is not available.

2008-08-15  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.4
	* This release contains major feature enhancements and bugfixes:
		- Implement 2-norm Multiple Kernel Learning.
		- Much extended documentation.
		- Add Gaussian kernel for 32bit floating point features.
		- Testsuite is now available for static interfaces python, octave,
		  matlab and R and modular interface octave.
	* Bugfixes:
		- Tests are now run in the examples/interface directory, with paths set
		to the installation directory.
		- Filter out duplicate signals in signal handler and make sure the
		handler is removed.
		- Fix random number generator initialization.

2008-06-13  Soeren Sonnenburg <debian@nn7.de>

	* SHOGUN Release version 0.6.3
	* This release contains several cleanups and bugfixes:
		- Fail nicely in out of memory situations.
		- Drop R package, now configure; make; make install will work for all
		interfaces.
		- Disable progress output by default. Ocas now uses a progress bar and
		  hence is less verbose.
		- Revised directory structure with /doc, /examples, /src, /testsuite.
		- Add common toy data repository and make all examples from all interfaces
		use it.
		- Add examples for cmdline interface.
		- Dynamically generate a reference documentation for the static interfaces.
		- Syntax highlight commands again.
		- Support for cplex 11.
		- Port MKL examples to R.
		- Merge structure learning branch.
	* Bugfixes:
		- Don't render string if it is not printed in current loglevel anyway