@@ -54,6 +54,7 @@
 #define N_BEST_PATH_TRANS					"best_path_trans"
 #define N_SET_PLIF_STRUCT					"set_plif_struct"
 #define N_GET_PLIF_STRUCT					"get_plif_struct"
+#define N_PRECOMPUTE_SUBKERNELS				"precompute_subkernels"
 #define N_PRECOMPUTE_CONTENT_SVMS			"precompute_content_svms"
 #define N_PRECOMPUTE_TILING_FEATURES		"precompute_tiling_features"
 #define N_SET_MODEL							"set_model"
@@ -180,7 +181,6 @@
 #define N_USE_MKL						"use_mkl"
 #define N_USE_SHRINKING					"use_shrinking"
 #define N_USE_LINADD					"use_linadd"
-#define N_USE_PRECOMPUTE				"use_precompute"
 #define N_OUTPUT_HMM					"output_hmm"
 #define N_OUTPUT_HMM_DEFINED			"output_hmm_defined"
 #define N_QUIT							"quit"
